2025-06-25T01:25:29Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/15865113598 # 685
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2025-06-25
* notice: last 14d: unq all: 2 7
* notice: prev accum: outdated-unq outdated-all / unq all: 1014 1494 / 1020 1500
* notice: next accum: outdated-unq outdated-all / unq all: 1014 1494 / 1021 1501
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2025-06-24]

2025-06-23T01:38:27Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/15813230777 # 683
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2025-06-23
* notice: last 14d: unq all: 2 6
* notice: prev accum: outdated-unq outdated-all / unq all: 1014 1494 / 1019 1499
* notice: next accum: outdated-unq outdated-all / unq all: 1014 1494 / 1020 1500
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2025-06-22]

2025-06-22T01:40:02Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/15801655195 # 682
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2025-06-22
* notice: last 14d: unq all: 2 5
* notice: prev accum: outdated-unq outdated-all / unq all: 1013 1493 / 1018 1498
* notice: next accum: outdated-unq outdated-all / unq all: 1014 1494 / 1019 1499
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [2025-06-07] / [2025-06-21]

2025-06-21T01:23:16Z: