@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2025-06-25T01:25:29Z",
+  "timestamp" : "2025-06-26T01:24:19Z",
   "count_outdated" : 1494,
   "uniques_outdated" : 1014,
-  "count" : 1501,
-  "uniques" : 1021,
+  "count" : 1502,
+  "uniques" : 1022,
   "clones" : [
     {
       "timestamp": "2025-06-14T00:00:00Z",
@@ -61,6 +61,15 @@
     },
     {
       "timestamp": "2025-06-24T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2025-06-25T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
       "count_decinc": [ 0, 1 ],
