@@ -1,6 +1,6 @@
 {
-  "count": 7,
-  "uniques": 2,
+  "count": 8,
+  "uniques": 3,
   "clones": [
     {
       "timestamp": "2025-06-14T00:00:00Z",
@@ -34,6 +34,11 @@
     },
     {
       "timestamp": "2025-06-24T00:00:00Z",
+      "count": 1,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2025-06-25T00:00:00Z",
       "count": 1,
       "uniques": 1
     }
