@@ -1,3 +1,12 @@
+2025-06-26T01:24:19Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/15890763668 # 686
+* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2025-06-26
+* notice: last 14d: unq all: 3 8
+* notice: prev accum: outdated-unq outdated-all / unq all: 1014 1494 / 1021 1501
+* notice: next accum: outdated-unq outdated-all / unq all: 1014 1494 / 1022 1502
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
+* notice: removed / changed dates: [] / [2025-06-25]
+
 2025-06-25T01:25:29Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/15865113598 # 685
 * notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2025-06-25
